httpbin/Deployment-httpbin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: default
  labels:
    app.kubernetes.io/name: httpbin
    app.kubernetes.io/part-of: demo
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: demo-httpbin-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
        app.kubernetes.io/part-of: demo
        app.kubernetes.io/component: api
        app.kubernetes.io/instance: demo-httpbin-api
    spec:
      containers:
        - name: httpbin
          image: httpbin
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /status/200
              port: http
          readinessProbe:
            httpGet:
              path: /status/200
              port: http
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
