httpbin/Service-httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  selector:
    app.kubernetes.io/name: httpbin
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
